[tool.poetry]
name = "comfyui-ella"
version = "0.1.0"
description = "ELLA plugin for ComfyUI"
authors = ["jetthu <jett.hux@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{ include = "*.py" }]


[tool.poetry.dependencies]
python = ">=3.6"

[tool.ruff]
line-length = 119

# A list of file patterns to omit from linting, in addition to those specified by exclude.
extend-exclude = ["__pycache__", "*.pyc", "*.egg-info", ".cache"]

select = ["E", "F", "W", "C90", "I", "UP", "B", "C4", "RET", "RUF", "SIM"]


ignore = [
    "UP006",    # UP006: Use list instead of typing.List for type annotations
    "UP007",    # UP007: Use X | Y for type annotations
    "UP009",
    "UP035",
    "UP038",
    "E402",
]

[tool.ruff.per-file-ignores]
# F401: unused-import
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
